--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/budget.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conversational Budget Manager</title>
+    <meta name="description" content="AI-powered conversational budget manager for tracking expenses through voice and text" />
+    <title>BudgetAI - Conversational Budget Manager</title>
   </head>
   <body>
     <div id="root"></div>
